--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "highcharts-react-official": "^3.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "recharts": "^2.9.0"
   },
