feat: csv download and other

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "d3-scale-chromatic": "^3.0.0",
     "highcharts": "^11.3.0",
     "highcharts-react-official": "^3.2.1",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
