--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,16 @@
     "48": "assets/icon48.png",
     "128": "assets/icon128.png"
   },
+  "action": {
+    "default_popup": "",
+    "default_icon": {
+      "16": "assets/icon16.png",
+      "32": "assets/icon32.png",
+      "48": "assets/icon48.png",
+      "128": "assets/icon128.png"
+    },
+    "default_title": "Click Me"
+  },
   "permissions": ["tabs", "storage"],
   "web_accessible_resources": [
     {
